# commitsync

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README  README.md
.github/workflows/: rust.yml
src/: branch_names.rs  cli.rs  git.rs  init_repo.rs  lib.rs  meta_branch_info.rs  store_commit.rs
src/cli/: init_repo.rs  list.rs  log.rs  select_commit.rs
src/cli/list/: graph_printer.rs  printer.rs
src/cli/log/: graph_printer.rs
src/git/: commit.rs  dirs.rs  error.rs  exec.rs  get_upstream.rs  raw_commit.rs
