[package]
name = "commitsync"
version = "0.1.0"
authors = ["Fred Emmott <fred@fredemmott.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

subprocess = "0.2.4"
chrono = "0.4"
structopt = "0.3.15"
tempfile = "3.1.0"
gethostname = "0.2.1"
whoami = "0.8.2"
colored = "1.9"
